Database connectivity added

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <div class="add-container">
+                <h2>Addition App</h2>
                 <input id="t1" type="text" placeholder="Please enter number 1"/>
                 <input id="t2" type="text" placeholder="Please enter number 2"/>
                 <div class="button-container">
